--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "antd": "^6.0.0",
     "firebase": "^12.5.0",
     "html2pdf.js": "^0.12.1",
-    "next": "16.0.1",
+    "next": "^16.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
